<resources>
    <string name="app_name">SmartHome</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="spinner_title">Houses list</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_test_acceuil">testAcceuil</string>
    <string name="devices">Devices</string>
    <string name="home">Home</string>
    <string name="houses">Houses</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="routeur">Routeur</string>
    <string name="profil">Profil</string>
    <string name="preference">preferences</string>



    <string name="deconnexion">Deconnexion</string>
    <string name="help">Help</string>
    <string name="price">Price kw/h</string>
    <string name="delete">Delete</string>

    <string name="title_activity_house_detail">HouseDetailActivity</string>
    <string name="toggle_turn_on"> on</string>
    <string name="toggle_turn_off">off </string>
    <string name="monthlyConsumption">Monthly Consumption </string>
    <string name="lastMonthConsumption">Last Month Consumption </string>










</resources>
