<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <!--tools:showIn="@layout/activity" tools:context=".Connexion"-->

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/profil_acceuil"
        android:id="@+id/profil_acceuil"
        android:layout_above="@+id/profilText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profil"
        android:id="@+id/profilText"
        android:layout_marginBottom="65dp"
        android:layout_above="@+id/home_acceuil"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/home_acceuil"
        android:id="@+id/home_acceuil"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"


        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/houses"
        android:id="@+id/homeText"

        android:layout_below="@+id/home_acceuil"
        android:layout_alignLeft="@+id/home_acceuil"
        android:layout_alignStart="@+id/home_acceuil" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/device_acceuil"
        android:id="@+id/device_acceuil"

        android:layout_marginTop="48dp"
        android:layout_below="@+id/homeText"
        android:layout_alignLeft="@+id/profil_acceuil"
        android:layout_alignStart="@+id/profil_acceuil" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devices"
        android:id="@+id/deviceText"
        android:layout_below="@+id/device_acceuil"
        android:layout_alignLeft="@+id/device_acceuil"
        android:layout_alignStart="@+id/device_acceuil" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/preference"
        android:id="@+id/home_preference"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_alignTop="@+id/home_acceuil"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preference"
        android:id="@+id/preferenceText"
        android:layout_below="@+id/home_preference"
        android:layout_marginLeft="40dp"
       />


</RelativeLayout>
